--- a/BeerTaps/BeerTaps.ApiServices/BeerTaps.ApiServices.csproj
+++ b/BeerTaps/BeerTaps.ApiServices/BeerTaps.ApiServices.csproj
@@ -175,20 +175,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BeerTapLinkParameter.cs" />
+    <Compile Include="LinkParameters\BeerTapLinkParameter.cs" />
     <Compile Include="BeerTapMapper.cs" />
     <Compile Include="IDomainServiceResolver.cs" />
     <Compile Include="Interfaces\IBeerTapApiService.cs" />
     <Compile Include="Interfaces\IOfficeApiService.cs" />
     <Compile Include="Interfaces\IReplaceKegApiServices.cs" />
-    <Compile Include="LinksParametersSource.cs" />
+    <Compile Include="LinkParameters\LinksParametersSource.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\ApiClient.cs" />
     <Compile Include="Security\AuthenticationFailedException.cs" />
     <Compile Include="Security\BeerTapsApiUser.cs" />
     <Compile Include="Services\BeerTapApiService.cs" />
     <Compile Include="Services\OfficeApiService.cs" />
-    <Compile Include="ReplaceKegLinkParameter.cs" />
+    <Compile Include="LinkParameters\ReplaceKegLinkParameter.cs" />
     <Compile Include="Services\ReplaceKegApiServices.cs" />
   </ItemGroup>
   <ItemGroup>
